# ChangeLog for sys-kernel/hardened-sources
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.538 2012/02/16 15:40:32 blueness Exp $

*hardened-sources-2.6.32-r91 (16 Feb 2012)

  16 Feb 2012; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.32-r91.ebuild:
  Based on 2.6.32.57 + genpatches-2.6.32-48 +
  grsecurity-2.2.2-2.6.32.57-201202131842

*hardened-sources-3.2.5 (09 Feb 2012)

  09 Feb 2012; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.2.5.ebuild:
  Based on 3.2.5 + genpatches-3.2-8 + grsecurity-2.2.2-3.2.5-201202081924

*hardened-sources-2.6.32-r90 (09 Feb 2012)

  09 Feb 2012; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.32-r90.ebuild:
  Based on 2.6.32.56 + genpatches-2.6.32-48 +
  grsecurity-2.2.2-2.6.32.56-201202071726

  29 Jan 2012; Anthony G. Basile <blueness@gentoo.org>
  -hardened-sources-2.6.32-r88.ebuild, -hardened-sources-3.2.2.ebuild:
  Remove versions with sized 0 vmalloc issue

  29 Jan 2012; Anthony G. Basile <blueness@gentoo.org>
  hardened-sources-2.6.32-r89.ebuild, hardened-sources-3.2.2-r1.ebuild:
  Fast stabilization, address CVE-2012-0056

*hardened-sources-3.2.2-r1 (28 Jan 2012)

  28 Jan 2012; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.2.2-r1.ebuild:
  Based on 3.2.2 + genpatches-3.2-5 + grsecurity-2.2.2-3.2.2-201201272014

*hardened-sources-2.6.32-r89 (28 Jan 2012)

  28 Jan 2012; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.32-r89.ebuild:
  Based on 2.6.32.55 + genpatches-2.6.32-48 +
  grsecurity-2.2.2-2.6.32.55-201201272054

*hardened-sources-3.2.2 (27 Jan 2012)

  27 Jan 2012; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.2.2.ebuild:
  Based on 3.2.2 + genpatches-3.2-5 + grsecurity-2.2.2-3.2.2-201201252117

*hardened-sources-2.6.32-r88 (27 Jan 2012)

  27 Jan 2012; Anthony G. Basile <blueness@gentoo.org>