@@ -57,6 +57,8 @@ DIST genpatches-3.2-5.base.tar.bz2 28499 RMD160 bd19317c1d3e5c427a49a6f46a6e2063
 DIST genpatches-3.2-5.extras.tar.bz2 17208 RMD160 8324da51ce71afb0d375f34b0dd05209079bd7a3 SHA1 c2f4e029aebbc0ae82221aa2643de06a2d08cbd8 SHA256 7f60ab18e2965d024b7a36327577bcc771061f2cfac221ed475a6fd6b2ab89c7
 DIST genpatches-3.2-8.base.tar.bz2 116981 RMD160 bfc3da660dbcd91f30579d32e57b68624d1a4a58 SHA1 9db2b7c9e31cc38c41add1df612df890ce58e20e SHA256 9d5bdb3c889de603126348bf017da08351cdab7a2084cf9b60712a9cf0bb0510
 DIST genpatches-3.2-8.extras.tar.bz2 17208 RMD160 8324da51ce71afb0d375f34b0dd05209079bd7a3 SHA1 c2f4e029aebbc0ae82221aa2643de06a2d08cbd8 SHA256 7f60ab18e2965d024b7a36327577bcc771061f2cfac221ed475a6fd6b2ab89c7
+DIST genpatches-3.2-9.base.tar.bz2 137696 RMD160 9cb8c324c129ce5e63a4f58706ad3de18408f1cf SHA1 d612888ce1246eb0df43ac3727b0037f24d014e6 SHA256 7d89bd725f0c9d92e93c301a1092da7211610d6eadf723b822ffb3c30dfc388e
+DIST genpatches-3.2-9.extras.tar.bz2 17198 RMD160 ba4f987b3f65c498f428c4d7bd40ff33dfa08c5a SHA1 e5216115c6e6543f159b235c2bc686245fe2598d SHA256 6633b79678aaca488942e42dac20c80480b6f9cf8c22e1ab300e34f9b07cd1db
 DIST hardened-patches-2.6.32-12.extras.tar.bz2 338946 RMD160 ce283b495ee2f009d36b94aca840f6519fbe9bb6 SHA1 56da715d64c6e2c50e292b19d27006d82118a337 SHA256 bfa5e7d9653b793b2bd88c40b8b52464fe39e1e098f1c5bc95d8476247fd288f
 DIST hardened-patches-2.6.32-45.extras.tar.bz2 378165 RMD160 f3a607fe2ee0afa3709524b29a2bf8cc89b82e31 SHA1 aff7340024bd53ae2237721dba1c489419da1f8f SHA256 04dd316b257644c104c7660a649abcd48a11fff59e7773988ace8e0da49b930c
 DIST hardened-patches-2.6.32-52.extras.tar.bz2 439152 RMD160 9708cc20d57aaf87208a09d997e7075b8f6b7728 SHA1 a47d05278508fe66b0b4503588a00da7242c45e2 SHA256 5f638986ab8118d8c331115fcd3eeba7b17e6e37e9c4895805e58747e8206a77
@@ -91,6 +93,7 @@ DIST hardened-patches-3.1.8-1.extras.tar.bz2 545281 RMD160 2a837cafac9263272303b
 DIST hardened-patches-3.2.1-1.extras.tar.bz2 493317 RMD160 ac0fbde3753392189a6b92820112e22b5155b51e SHA1 e94344976867e6070e8f78cfd77732c76df57ea3 SHA256 1fa028fbffc87f023418e4bf060203d80dd282bf9ee035bf93acbf6def514a05
 DIST hardened-patches-3.2.2-2.extras.tar.bz2 549864 RMD160 13c1c5229cadf18c08a0836154e42b704886e4c3 SHA1 5084934b7e1b910866b3aba55372366b13df5f43 SHA256 ac5a31186deea2324442f0989bc897548d018d0fbd2fa1abcc7cd846b3271a19
 DIST hardened-patches-3.2.5-1.extras.tar.bz2 494017 RMD160 55d04da503d5bc3f9cd90703c004a1f3fe010277 SHA1 b2c598edc9dda7c36b1f57b33955d3234589449a SHA256 685d750c7abd02a81563972ca81f1fe0e4989c4ddb333ecfbc3dd61191c7f022
+DIST hardened-patches-3.2.6-1.extras.tar.bz2 493618 RMD160 d74f4a1a2904d9b6a583103b4eb2d913644a04f2 SHA1 3701d4d2ce4bce8a381e4327b5211145544a4e10 SHA256 f439e3128e3b98838eed147731b0e8cb8428aa39090c227e4fb4fccd4abc867c
 DIST linux-2.6.32.tar.bz2 64424138 RMD160 b93742cbaf8174f2200d2dbef0d47a26c618039c SHA1 410b4fc818023bfef60064e973ff0ab46d3bfb19 SHA256 5099786d80b8407d98a619df00209c2353517f22d804fdd9533b362adcb4504e
 DIST linux-2.6.36.tar.bz2 70277083 RMD160 d739da505a79e71a1370d36e1373b36be055c123 SHA1 b546ab66458d7d614151d80adbc03b4d28977ae2 SHA256 15a076d1a435a6bf8e92834eba4b390b4ec094ce06d47f89d071ca9e5788ce04
 DIST linux-2.6.37.tar.bz2 73577826 RMD160 fced3801f3c94aa545c90e10981de616376a3b41 SHA1 eba83c89e71a86060ef6ff76aefff660aef819e2 SHA256 edbf091805414739cf57a3bbfeba9e87f5e74f97e38f04d12060e9e0c71e383a
@@ -133,13 +136,14 @@ EBUILD hardened-sources-3.1.8.ebuild 1812 RMD160 b015a4721902bd06ccbc59fb60ead57
 EBUILD hardened-sources-3.2.1.ebuild 1811 RMD160 9f30d7f1808d3618b114d1b9fb179db49a01a085 SHA1 09890874a27d30ed83e6fdf4673a29e1434f491a SHA256 88293e702f078fcf33861639fe0c1fcf57ce2789667eb5871ebdedc648ed18a0
 EBUILD hardened-sources-3.2.2-r1.ebuild 1845 RMD160 1c3369d5e8099eaeb91368148a0fd05ed281aa9c SHA1 4d2bad98d4d71015e6228b2f3f646b8bbb8bedd8 SHA256 599e64a9804655364efb503083885c34b2db5038041d4f314be27796415c68e2
 EBUILD hardened-sources-3.2.5.ebuild 1884 RMD160 cafb298058d52a68d5fd279f991eca991d000e54 SHA1 09136bcb00beac13582587896e8526a73b405f30 SHA256 4b609da41b6ec8e11d8f2db0a79ebbaa84a46005f4191c774a5e90099d3a57eb
-MISC ChangeLog 4490 RMD160 450b7b1368d4a6a3a937b4c6520d87667543c1e7 SHA1 2f7ebb6d0804bee3f9ed24240c654f4caf24a080 SHA256 217816ce14387eab972f942db0165dad591c1ab0911a4a282b761796ee214ae9
+EBUILD hardened-sources-3.2.6.ebuild 1884 RMD160 5906cff8cebc6efe6cde27821d72c0f6ede11169 SHA1 5d5e0a516ca6886d181bfc514b05949b49ba94a7 SHA256 4b77a01f100e38b1f70ae19bb76a38db0a7e8707a2a0dc322286d7c0826c54c9
+MISC ChangeLog 4693 RMD160 1ca4b48dd444d3afa3900cf7613c683f04d2b213 SHA1 447bab09248154b937db6fdc2e60a658fadc073f SHA256 909c9d97f0c58b0819f680a0400a4802655e2609be44c6d2ddd57513e78faa4c
 MISC ChangeLog-2011 112069 RMD160 2a385edf0499f6dc30581100b66f641fb64f77ef SHA1 af33094b92426b6abd963227d817db249ccbe877 SHA256 39bac69a08709be5b79c6e711fd94aac7e53191b76fef64f9b3d09f7b5ac0f82
 MISC metadata.xml 651 RMD160 bd2f856b7c5aea29652610491cd60135e1e9b9f1 SHA1 1741d5fc80ad8f934fa7ad177b4662d1993d8584 SHA256 614ce0d6e8cfcf0b4dbf344b2758f25375afdaadccbfa4f68c3f8f058218f0a6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk89I3sACgkQl5yvQNBFVTU1BQCdGKNaHR1HZ5/TnmxXwrJVV55G
-YhsAnjPTSMb9DVJxsEjTok7S3QTDZPK0
-=O2z+
+iEYEAREIAAYFAk89JEcACgkQl5yvQNBFVTU6iACbBJqtY+ykYvbR1OgSQ1GgKXA5
+VLkAn0c/lR6c8lQ+SueWpNsNxTE0C3P+
+=o1As
 -----END PGP SIGNATURE-----
