@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/hardened-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.538 2012/02/16 15:40:32 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.539 2012/02/16 15:43:55 blueness Exp $
+
+*hardened-sources-3.2.6 (16 Feb 2012)
+
+  16 Feb 2012; Anthony G. Basile <blueness@gentoo.org>
+  +hardened-sources-3.2.6.ebuild:
+  Based on 3.2.6 + genpatches-3.2-9 + grsecurity-2.2.2-3.2.6-201202131824
 
 *hardened-sources-2.6.32-r91 (16 Feb 2012)
 
